gke/resources/other/confluent-cloud-external-mesh.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: confluent-cloud-external-mesh
  namespace: dev
spec:
  hosts:
  - your_cluster_url.gcp.confluent.cloud
  ports:
  - name: kafka
    number: 9092
    protocol: TLS
  location: MESH_EXTERNAL
  resolution: NONE
