gke/resources/other/external-mesh-confluent-cloud.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-mesh-confluent-cloud
spec:
  hosts:
  - pkc-lo894.us-central1.gcp.confluent.cloud
  ports:
  - name: kafka
    number: 9092
    protocol: TLS
  location: MESH_EXTERNAL
  resolution: NONE
