gke/resources/other/istio-gateway-multi-ns.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: storefront-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - api.dev.storefront-demo.com
    - api.test.storefront-demo.com
    - api.staging.storefront-demo.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: storefront-dev
spec:
  hosts:
  - api.dev.storefront-demo.com
  gateways:
  - storefront-gateway
  http:
  - match:
    - uri:
        prefix: /accounts
    route:
    - destination:
        port:
          number: 8080
        host: accounts.dev.svc.cluster.local
  - match:
    - uri:
        prefix: /fulfillment
    route:
    - destination:
        port:
          number: 8080
        host: fulfillment.dev.svc.cluster.local
  - match:
    - uri:
        prefix: /orders
    route:
    - destination:
        port:
          number: 8080
        host: orders.dev.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: storefront-test
spec:
  hosts:
  - api.test.storefront-demo.com
  gateways:
  - storefront-gateway
  http:
  - match:
    - uri:
        prefix: /accounts
    route:
    - destination:
        port:
          number: 8080
        host: accounts.test.svc.cluster.local
  - match:
    - uri:
        prefix: /fulfillment
    route:
    - destination:
        port:
          number: 8080
        host: fulfillment.test.svc.cluster.local
  - match:
    - uri:
        prefix: /orders
    route:
    - destination:
        port:
          number: 8080
        host: orders.test.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: storefront-staging
spec:
  hosts:
  - api.staging.storefront-demo.com
  gateways:
  - storefront-gateway
  http:
  - match:
    - uri:
        prefix: /accounts
    route:
    - destination:
        port:
          number: 8080
        host: accounts.staging.svc.cluster.local
  - match:
    - uri:
        prefix: /fulfillment
    route:
    - destination:
        port:
          number: 8080
        host: fulfillment.staging.svc.cluster.local
  - match:
    - uri:
        prefix: /orders
    route:
    - destination:
        port:
          number: 8080
        host: orders.staging.svc.cluster.local
